src/pages/includes/css/home.css
.home-main {
    background-color: #F6F3E8;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
    align-content: center;
    height: 91vh;
  }

.home-row-one {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100vw;
  margin-bottom: -23.5px;
}

.home-row-two {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-top: -24px;
}

